--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/TestPresaleWeb/layui/css/layui.css" rel="stylesheet">
+    <link href="/layui/css/layui.css" rel="stylesheet">
 </head>
 
 <body>
@@ -76,8 +76,9 @@
                             <button type="button" class="layui-btn layui-btn-normal layui-btn-radius"
                                 id="buyBtn">BUY</button>
                             <button type="button" class="layui-btn layui-btn-normal layui-btn-radius"
-                                id="claimBtn">CLAIM</button>
+                                id="claimBtn">CLAIM</button><a id="jinduValue">领取进度: 0%</a>
                         </blockquote>
+                       
                     </div>
                 </fieldset>
                 <fieldset class="layui-elem-field">
@@ -109,11 +110,11 @@
 
     </div>
 
-    <script src="/TestPresaleWeb/layui/layui.js"></script>
-    <script src="/TestPresaleWeb/js/jquery.min.js"></script>
-    <script src="/TestPresaleWeb/js/web3.min.js"></script>
-    <script src="/TestPresaleWeb/js/data.js"></script>
-    <script src="/TestPresaleWeb/js/extensions.js?v=2"></script>
+    <script src="/layui/layui.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/web3.min.js"></script>
+    <script src="/js/data.js"></script>
+    <script src="/js/extensions.js?v=2"></script>
     <script>
         //JS 
         layui.use(['element', 'layer', 'util'], function () {
@@ -219,6 +220,9 @@
             $('#balancesValue').text("参与额度: " + web3.utils.fromWei(userInfo.balances) + " ETH");
             var getTokenAmountValue = await getTokenAmount();
             $('#claimTokenValue').text("可分配token: " + getTokenAmountValue + " CBT");
+
+            var claimTotalAmount = await getClaimTotal();
+            $('#jinduValue').text("领取进度: " + claimTotalAmount / tokenTotalAmount * 100 + "%");
 
         }
 
