--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/layui/css/layui.css" rel="stylesheet">
+    <link href="/TestPresaleWeb/layui/css/layui.css" rel="stylesheet">
 </head>
 
 <body>
@@ -110,11 +110,11 @@
 
     </div>
 
-    <script src="/layui/layui.js"></script>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/web3.min.js"></script>
-    <script src="/js/data.js"></script>
-    <script src="/js/extensions.js?v=2"></script>
+    <script src="/TestPresaleWeb/layui/layui.js"></script>
+    <script src="/TestPresaleWeb/js/jquery.min.js"></script>
+    <script src="/TestPresaleWeb/js/web3.min.js"></script>
+    <script src="/TestPresaleWeb/js/data.js"></script>
+    <script src="/TestPresaleWeb/js/extensions.js?v=2"></script>
     <script>
         //JS 
         layui.use(['element', 'layer', 'util'], function () {
